--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,3 @@
 = Signature Support Service Library
 
-== Introduction
-TODO
-
-=== Requirements
-TODO
-
-== Examples
-TODO
+Documentation available in `signservice-doc/main/en/integration/support_api.adoc`.
