--- a/README.adoc
+++ b/README.adoc
@@ -8,42 +8,54 @@ signature responses, according to the technical framework specified by Sweden Co
 This document describes the technical details of the Signature Support Service API,
 and how to use it to implement digital signature workflow in an existing web application.
 
-*NOTE:* This document only shows a handful of configuration options available when using the different builders.
-Please check out the `javadoc` to get a complete listening of available configuration options.
+== Installation
 
-== Building the API
-The API is configured and initialized using builder pattern. The following gives an example of how to build
+=== Maven Dependency
+The library can be used within a maven project by adding the following dependency:
+```
+<dependency>
+    <groupId>se.signatureservice.support</groupId>
+    <artifactId>signservice-support-lib</artifactId>
+    <version>2401.1</version>
+</dependency>
+```
+=== Gradle Dependency
+The library can be used within a Gradle project by adding the following dependency:
+```
+implementation 'se.signatureservice.support:signservice-support-lib:2401.1'
+```
+== Usage Guide
+
+=== Initializing the Library
+The library is configured and initialized using builder pattern. The following gives a basic example of how to build
 an instance of the API:
 ```
-    SupportServiceAPI supportServiceAPI = new V2SupportServiceAPI.Builder()
-        .messageSecurityProvider(messageSecurityProvider)
-        .cacheProvider(cacheProvider)
-        .trustStore(trustedCertificateSource)
-        .build();
+SupportServiceAPI supportServiceAPI = new V2SupportServiceAPI.Builder()
+    .messageSecurityProvider(messageSecurityProvider)
+    .cacheProvider(cacheProvider)
+    .trustStore(trustedCertificateSource)
+    .build();
 ```
-
-NOTE: For all available api settings please refer to the `V2SupportServiceAPI.Builder` Javadoc.
-
-=== Message Security Provider
+==== Message Security Provider
 When creating an instance of the support service API a message security provider must be provided. The
 message security provider is used when signing signature requests and when verifying signature responses.
 A custom message security provider can be created by implementing `org.certificateservices.messages.MessageSecurityProvider`.
 It is also possible to use a build-in simple message security provider. The following gives an example of how to
 create a simple message security provider:
 ```
-    // Initialize XML security library. This is needed before creating the
-    // message security provider.
-    Init.init();
+// Initialize XML security library. This is needed before creating the
+// message security provider.
+Init.init();
 
-    MessageSecurityProvider messageSecurityProvider = SupportLibraryUtils.createSimpleMessageSecurityProvider(
-        "/path/to/keystore.jks",
-        "keystore_password",
-        "keystore_alias",
-        "/path/to/truststore.jks",
-        "truststore_password"
-    );
+MessageSecurityProvider messageSecurityProvider = SupportLibraryUtils.createSimpleMessageSecurityProvider(
+    "/path/to/keystore.jks",
+    "keystore_password",
+    "keystore_alias",
+    "/path/to/truststore.jks",
+    "truststore_password"
+);
 ```
-=== Cache Provider
+==== Cache Provider
 The API also requires a cache provider that will be used when storing transaction state information that needs
 to be kept after creating a signature request and until processing the signature response. A custom cache provider
 can be created by implementing `se.signatureservice.support.common.cache.CacheProvider` . It is also possible to use
@@ -52,7 +64,7 @@ a simple cache provider:
 ```
     CacheProvider cacheProvider = new SimpleCacheProvider();
 ```
-=== Trusted Certificate Source
+==== Trusted Certificate Source
 The API needs a source of trusted certificates that will be used when validating signed documents. A custom implementation
 of a trusted certificate source can be created by implementing `eu.europa.esig.dss.spi.x509.CertificateSource`. It is also
 possible to use the existing KeyStoreCertificateSource that loads trusted certificates from a keystore file (JKS or PKCS#12):
@@ -63,46 +75,46 @@ possible to use the existing KeyStoreCertificateSource that loads trusted certif
         "somepassword"
     )
 ```
-== Using the API
+=== Using the library
 The API will be used to create signature requests that then needs to be sent to the central signature service
 through an `HTTP POST` through the user browser. The central signature service will the re-direct the user to the
 identity provider, and after successful authentication the user will be re-directed to a pre-determined consumer URL
 through an `HTTP POST` with the signature request as parameter. The following gives an overview how the API is used
 during these steps:
 ```
-    // Create user that is going to sign the document(s)
-    User user = new User.Builder()
-        // Specify user ID (required)
-        .userId("195207092072")
-        // Specify role (optional)
-        .role("testrole")
-        // Build user
-        .build();
+// Create user that is going to sign the document(s)
+User user = new User.Builder()
+    // Specify user ID (required)
+    .userId("195207092072")
+    // Specify role (optional)
+    .role("testrole")
+    // Build user
+    .build();
 
-    // Create document requests to include in the transaction.
-    DocumentRequests documentRequests = new DocumentRequests.Builder()
-        .addXMLDocument("/path/to/document.xml")
-        .build();
+// Create document requests to include in the transaction.
+DocumentRequests documentRequests = new DocumentRequests.Builder()
+    .addXMLDocument("/path/to/document.xml")
+    .build();
 
-    // Generate the prepared signature request using the support service API.
-    PreparedSignatureResponse preparedSignature = supportServiceAPI.prepareSignature(
-            // Profile configuration (see below).
-            profileConfig,
-            // Docment(s) to request signature for.
-            documentRequests,
-            // Let the API generate transaction ID automatically.
-            null,
-            // Sign message or null if not used.
-            "Some sign message",
-            // User signing the document.
-            user,
-            // Entity ID of identity provider to use.
-            "https://idp.someorg.com/samlv2/idp/metadata",
-            // Consumer URL to receive the sign response.
-            "https://app.someorg.com/sign",
-            // No attributes.
-            null
-    );
+// Generate the prepared signature request using the support service API.
+PreparedSignatureResponse preparedSignature = supportServiceAPI.prepareSignature(
+    // Profile configuration (see below).
+    profileConfig,
+    // Docment(s) to request signature for.
+    documentRequests,
+    // Let the API generate transaction ID automatically.
+    null,
+    // Sign message or null if not used.
+    "Some sign message",
+    // User signing the document.
+    user,
+    // Entity ID of identity provider to use.
+    "https://idp.someorg.com/samlv2/idp/metadata",
+    // Consumer URL to receive the sign response.
+    "https://app.someorg.com/sign",
+    // No attributes.
+    null
+);
 ```
 The `PreparedSignatureResponse` received from a successful call to prepareSignature contains the following information:
 
@@ -119,77 +131,74 @@ be generated using a helper:
 After a successful signature flow the signature response will be sent to the consumer URL. The library can then
 be used to create the complete signed document(s), shown through the following example:
 ```
-        // Process the sign response using the support service API.
-        CompleteSignatureResponse completeSignature = supportServiceAPI.completeSignature(
-                profileConfig,
-                eidSignResponse,
-                transactionId
-        );
+// Process the sign response using the support service API.
+CompleteSignatureResponse completeSignature = supportServiceAPI.completeSignature(
+    profileConfig,
+    eidSignResponse,
+    transactionId
+);
 
-        // Retrieve the signed document
-        Document signedDocument = (Document)completeSignature
-            .getDocuments().getDocuments().get(0);
+// Retrieve the signed document
+Document signedDocument = (Document)completeSignature
+    .getDocuments().getDocuments().get(0);
 ```
-
-=== Verifying a document
+==== Verifying a document
 The API can be used in order to verify a signed document and to assure that the document has not been altered. The
 following example shows how to verify a signed document using the API:
 ```
-    VerifyDocumentResponse verifiedDocument = supportServiceAPI.verifyDocument(
-        profileConfig,
-        signedDocument
-    );
+VerifyDocumentResponse verifiedDocument = supportServiceAPI.verifyDocument(
+    profileConfig,
+    signedDocument
+);
 
-    if(verifiedDocument.isVerifies()) {
-        // Document verified successfully.
-    } else {
-        // Document verification failed.
-    }
+if(verifiedDocument.isVerifies()) {
+    // Document verified successfully.
+} else {
+    // Document verification failed.
+}
 ```
 
 The validation report is available within the `verifiedDocument.getReportData()`.
 
-== Profile configuration
+=== Profile configuration
 When using the API a profile configuration instance (`se.signatureservice.support.system.SupportAPIProfile`) needs to be created and provided. The profile configuration contains
 a lot of settings to control how the request is created and how the signature is performed. Profile configuration is
-created using builder pattern. The following gives an example of how to create a profile configuration:
+created using builder pattern. The following gives a basic example of how to create a profile configuration:
 ```
-    SupportAPIProfile profileConfig = new SupportAPIProfile.Builder()
-        // Entity ID of central signature service to use.
-        .signServiceId("https://sign.someorg.com/signservice-frontend/metadata")
+SupportAPIProfile profileConfig = new SupportAPIProfile.Builder()
+    // Entity ID of central signature service to use.
+    .signServiceId("https://sign.someorg.com/signservice-frontend/metadata")
 
-        // Request URL to send signature requests to.
-        .signServiceRequestURL("https://sign.someorg.com/signservice-frontend/request")
+    // Request URL to send signature requests to.
+    .signServiceRequestURL("https://sign.someorg.com/signservice-frontend/request")
 
-        // Add identity provider that are trusted to be used by this profile.
-        .addTrustedAuthenticationService("Some idP", "https://idp.someorg.com/samlv2/idp/metadata", "Some Trusted iDP")
+    // Add identity provider that are trusted to be used by this profile.
+    .addTrustedAuthenticationService("Some idP", "https://idp.someorg.com/samlv2/idp/metadata", "Some Trusted iDP")
 
-        // Add requested certificate attribute that will be used within the request.
-        .addRequestedCertAttribute("givenName",  "urn:oid:2.5.4.42", "2.5.4.42", true)
-        .addRequestedCertAttribute("sn", "urn:oid:2.5.4.4", "2.5.4.4", true)
-        .addRequestedCertAttribute("serialNumber", "urn:oid:1.2.752.29.4.13", "2.5.4.5", true)
-        .addRequestedCertAttribute("commonName", "urn:oid:2.16.840.1.113730.3.1.241", "2.5.4.3", false)
-        .addRequestedCertAttribute("displayName", "urn:oid:2.16.840.1.113730.3.1.241", "2.16.840.1.113730.3.1.241", false)
-        .addRequestedCertAttribute("c", "urn:oid:2.5.4.6", "2.5.4.6", false)
-        .addRequestedCertAttribute("gender", "urn:oid:1.3.6.1.5.5.7.9.3", "1.3.6.1.5.5.7.9.3", "sda", false)
+    // Add requested certificate attribute that will be used within the request.
+    .addRequestedCertAttribute("givenName",  "urn:oid:2.5.4.42", "2.5.4.42", true)
+    .addRequestedCertAttribute("sn", "urn:oid:2.5.4.4", "2.5.4.4", true)
+    .addRequestedCertAttribute("serialNumber", "urn:oid:1.2.752.29.4.13", "2.5.4.5", true)
+    .addRequestedCertAttribute("commonName", "urn:oid:2.16.840.1.113730.3.1.241", "2.5.4.3", false)
+    .addRequestedCertAttribute("displayName", "urn:oid:2.16.840.1.113730.3.1.241", "2.16.840.1.113730.3.1.241", false)
+    .addRequestedCertAttribute("c", "urn:oid:2.5.4.6", "2.5.4.6", false)
+    .addRequestedCertAttribute("gender", "urn:oid:1.3.6.1.5.5.7.9.3", "1.3.6.1.5.5.7.9.3", "sda", false)
 
-        // Add authorized consumer URL that can be used with this profile.
-        .addAuthorizedConsumerURL("https://app.someorg.com/sign")
+    // Add authorized consumer URL that can be used with this profile.
+    .addAuthorizedConsumerURL("https://app.someorg.com/sign")
 
-        // Specify identity of the application that generates the signature requests.
-        .signRequester("https://app.someorg.com/support/metadata")
+    // Specify identity of the application that generates the signature requests.
+    .signRequester("https://app.someorg.com/support/metadata")
 
-        // Specify a name for the profile.
-        .relatedProfile("rsaProfile")
+    // Specify a name for the profile.
+    .relatedProfile("rsaProfile")
 
-        // Enable Authn profile. This must match how the signature service is configured.
-        .enableAuthnProfile(true)
+    // Enable Authn profile. This must match how the signature service is configured.
+    .enableAuthnProfile(true)
 
-        // Finally build the profile.
-        .build();
+    // Finally build the profile.
+    .build();
 ```
-
-NOTE: For all available profile settings please refer to the `SupportAPIProfile.Builder` Javadoc.
 
 === Visible PDF Signatures
 Visible signatures is a feature that can be enabled when signing PDF documents. It consists of
